--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <iframe srcdoc='
   <html>
-    <body style="margin:0; padding:0; overflow:hidden;">
+    <body style="margin:0; padding:0; overflow:hidden; display:flex;">
       <a href="https://karantrehan3.github.io/" target="_top" style="text-decoration:none;">
         <button style="display:flex; align-items:center; padding:10px; font-size:16px; background: linear-gradient(to right, #ff7e5f, #feb47b); border:none; color:white; border-radius:5px; cursor:pointer;">
           <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Go-home-2.svg" alt="Home" style="width:20px; height:20px; margin-right:5px;">
@@ -10,9 +10,9 @@
       <a href="javascript:void(0);" onclick="window.history.back();" style="text-decoration:none; margin-left:2px;">
         <button style="display:flex; align-items:center; padding:10px; font-size:16px; background: linear-gradient(to right, #ff7e5f, #feb47b); border:none; color:white; border-radius:5px; cursor:pointer;">
           <img src="https://commons.wikimedia.org/wiki/Emoji/Table#/media/File:Twemoji12_1f519.svg" alt="Back" style="width:20px; height:20px; margin-right:5px;">
-          Home
+          Back
         </button>
       </a>
     </body>
-  </html>' style="border:none; width:100px; height:50px;">
+  </html>' style="border:none; width:300px; height:60px;">
 </iframe>
