Header | Attempting to fix no text bug

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,2 @@
-<iframe title="Header" src="https://karantrehan3.github.io/#/external/header" style="border:none; height:37px" />
+<iframe title="Header" src="https://karantrehan3.github.io/#/external/header"
+    style="border:none; height:37px; width:100%;"></iframe>
